--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+.venv
+frontend/node_modules
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -97,3 +99,22 @@ target/
 
 # exclude lancedb from source control by default
 lancedb/
+
+# Frontend build outputs
+frontend/dist/
+frontend/build/
+
+# Node debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Pytest cache
+.pytest_cache/
+
+# Local env files (keep .env in repo if needed, ignore local overrides)
+.env.local
+.env.*.local
+
+# IDE folders
+/.idea/
