--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,13 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.12",
+    "psycopg2>=2.9.11",
     "requests>=2.32.3",
+    "sqlalchemy>=2.0.45",
     "uvicorn>=0.34.2",
 ]
 
 [dependency-groups]
 dev = [
     "ipykernel>=6.29.5",
-]
+] v
